--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "dmzx/specialtitle",
 	"type": "phpbb-extension",
 	"description": "This extension allows users to add a special title in UCP.",
+	"homepage": "http://www.dmzx-web.net",
 	"version": "1.0.1",
 	"time": "2015-08-15",
 	"keywords": ["phpbb", "extension", "specialtitle"],
