--- a/composer.json
+++ b/composer.json
@@ -3,20 +3,26 @@
 	"type": "phpbb-extension",
 	"description": "This extension allows users to add a special title in UCP.",
 	"homepage": "http://www.dmzx-web.net",
-	"version": "1.0.1",
-	"time": "2015-08-15",
-	"keywords": ["phpbb", "extension", "specialtitle"],
-	"license": "GPL-2.0",
+	"version": "1.0.2",
+	"time": "2021-01-07",
+	"keywords": [
+		"phpbb",
+		"extension",
+		"specialtitle"
+	],
+	"license": "GPL-2.0-only",
 	"authors": [
 		{
 			"name": "dmzx",
-			"homepage": "http://www.dmzx-web.net",
+			"homepage": "https://www.dmzx-web.net",
 			"email": "info@dmzx-web.net",
 			"role": "Extension Developer"
 		}
 	],
 	"require": {
-		"php": ">=5.3.3"
+		"php": ">=5.4",
+		"composer/installers": "~1.0",
+		"phpbb/phpbb": ">=3.1.4-RC1,<4.0.0@dev"
 	},
 	"require-dev": {
 		"phpbb/epv": "dev-master"
@@ -24,12 +30,13 @@
 	"extra": {
 		"display-name": "Special Title",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.4-RC1,<3.2.*@dev"
+			"phpbb/phpbb": ">=3.1.4-RC1,<4.0.0@dev"
 		},
 		"version-check": {
 			"host": "www.dmzx-web.net",
 			"directory": "/versions",
-			"filename": "specialtitle_version.json"
+			"filename": "specialtitle_version.json",
+			"ssl": true
 		}
 	}
 }
